# PLYbench

./: .clang-format  .gitignore  .gitmodules  .project.vim  CMakeLists.txt  README.md  README.md.in  configure  mesh.h  parsers.cpp  parsers.h  plybench.cpp  tests.cpp
scripts/: download_models.py  generate_readme.py  plot_graph.py  relative_performance.py  update_results.sh
src/: mesh.h  mesh_ios.h  msh_ply.c  msh_ply.h  parsers.cpp  parsers.h  plybench.cpp  tests.cpp  util.cpp  util.h  writers.cpp  writers.h
